--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.30",
+    "gatsby-plugin-emotion": "^4.0.4",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-offline": "^2.0.24",
