--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: master
 
 publish_mode: editorial_workflow
-media_folder: static/img
+media_folder: src/images
 public_folder: /img
 
 collections:
@@ -17,5 +17,6 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Cover Image", name: "cover_image", widget: "image"}
       - {label: "Description", name: "description", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
