--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,8 +4,8 @@ backend:
   branch: master
 
 publish_mode: editorial_workflow
-media_folder: src/images
-public_folder: src/images
+media_folder: static/img
+public_folder: /img
 
 collections:
   - name: "blog"
